# laundromatic

./: .gitignore  LICENSE  README.md  pyproject.toml  working.xlsx  ~$working.xlsx
data/: nuts1_uk.csv
src/laundromatic/: __init__.py  __main__.py  cli.py  core.py  locations.py  main.py  models.py  tests.py  weather_data.py
src/laundromatic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: drying_progress.py  tests.py  windows.py
