[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "laundromatic"
version = "0.1.0"
description = "A fun tool for recommending optimal outdoor clothes-drying windows."
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]